# AuraBaba_Clip_SKill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
Reference/: confirmation_gates.md  output_layout.md  template_selection_guide.md  validation_requirements.md  workflow.md
Reference/clipping_rules/: gaming_livestream.md  podcast_interview.md  solo_course.md  sports_highlights.md
runtime/jobs/https-youtu-be-example__d26a0caa/: intake.json  status.json
runtime/jobs/ops-full-article/: status.json
runtime/jobs/url-download-fail/: status.json
schemas/: clip_plan.schema.json  publish_copy.schema.json  status.schema.json
scripts/: doctor.py
src/clipclipskill/: analysis.py  audio.py  capability.py  cli.py  diarize.py  downloader.py  estimate.py  ops_copy.py  plan.py  probe.py  progress.py  render.py  score.py  segment.py  status.py  templates.py  transcribe.py  validation.py  workspace.py
templates/content_types/: gaming_livestream.json  podcast_interview.json  solo_course.json  sports_highlights.json
templates/ops/: generic_publish.json  hashtag_banks.json  short_video_title_patterns.json
templates/prompts/: clip_plan_generation.md  publish_copy_generation.md  transcript_analysis.md
tests/: test_analysis_pipeline.py  test_capability.py  test_cli_ops_flow.py  test_cli_url_flow.py  test_clip_plan_schema.py  test_input_sources.py  test_ops_copy.py  test_progress.py  test_render_layout.py  test_smoke_pipeline.py  test_status_transitions.py  test_template_rules.py  test_transcribe_backend.py  test_validation.py  test_workspace_dir.py
(+13 files in other folders)
